# RenderToy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: ROOT_PATH.h.in
doc/: bug_log.md
include/: OBJ_Loader.hpp
include/Core/: intersection.h  material.h  object.h  platinum.h
include/Geometry/: sphere.h
include/Math/: utils.h
include/glm/gtx/: normalize_dot.hpp
src/: CMakeLists.txt  render_toy.h
src/Core/: CMakeLists.txt  aabb.cpp  aabb.h  bsdf.cpp  bsdf.h  bvh.cpp  bvh.h  bvh_node.h  camera.cpp  camera.h  core.h  defines.h  film.cpp  film.h  image.c  image.cpp  image.h  integrator.cpp  integrator.h  intersection.cpp  intersection.h  light.cpp  light.h  logger.h  material.h  object.h  platinum.h  rand.h  ray.cpp  ray.h  renderer.cpp  renderer.h  sampler.h  scene.cpp  scene.h  shape.h  singleton.h  tCamera.cpp  tCamera.h  tRay.h  (+8 more)
src/Geometry/: CMakeLists.txt  geometry.h  instance.cpp  instance.h  movingSphere.cpp  movingSphere.h  moving_sphere.cpp  moving_sphere.h  sphere.cpp  sphere.h  triMesh.cpp  triMesh.h  triangle.cpp  triangle.h  triangle_mesh.cpp  triangle_mesh.h  vertex.cpp  vertex.h  volume.cpp  volume.h
src/Integrator/: CMakeLists.txt  pathIntegrator.h  path_integrator.cpp  path_integrator.h  whitted_integrator.cpp  whitted_integrator.h
src/Material/: CMakeLists.txt  dielectric.cpp  dielectric.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  light.cpp  light.h  material.h  metal.cpp  metal.h
src/Math/: math.h  normal.h  perlin.cpp  perlin.h  point.h  rand.cpp  rand.h  vector.h
src/Texture/: checkerTexture.cpp  checkerTexture.h  checker_texture.cpp  checker_texture.h  constTexture.cpp  constTexture.h  const_texture.cpp  const_texture.h  imgTexture.cpp  imgTexture.h  img_texture.cpp  img_texture.h  noiseTexture.cpp  noiseTexture.h  noise_texture.cpp  noise_texture.h  texture.h
tests/01/image/: CMakeLists.txt  image.cpp  main.cpp
tests/01/random_scene/: CMakeLists.txt  random_scene.cpp
tests/openmp/: CMakeLists.txt
tests/openmp/factal/: fractal.cpp
tests/openmp/mt_1/: multi_thread.cpp
tests/openmp/mt_2/: CMakeLists.txt
tests/stage1/antialiasing/: antialiasing.cpp
tests/stage1/defocus/: defocus.cpp
tests/stage1/dielectrics/: dielectrics.cpp
tests/stage1/diffuse/: difuse.cpp
tests/stage1/image/: image.cpp
tests/stage1/metal/: CMakeLists.txt  metal.cpp
tests/stage1/multi_object/: multi_object.cpp
tests/stage1/random_scene/: random_scene.cpp
tests/stage1/ray/: CMakeLists.txt  ray.cpp
tests/stage1/sphere/: sphere.cpp
tests/stage2/all_scene/: all_scenen.cpp
tests/stage2/box/: CMakeLists.txt  box.cpp  box.h
tests/stage2/bvh/: bvh.cpp
tests/stage2/img_texture/: img_texture.cpp
tests/stage2/instance/: instance.cpp  instance.h
tests/stage2/light/: light.cpp
tests/stage2/metal_cornell/: metal_cornell.cpp
tests/stage2/motion/: motion.cpp
tests/stage2/obj_loader/: CMakeLists.txt  obj_loader.cpp
tests/stage2/perlin/: perlin.cpp
tests/stage2/solid_texture/: solid_texture.cpp
tests/stage2/sphere_instance/: sphere_instance.cpp
tests/stage2/volume/: volume.cpp
tests/stage3/MC/: MC.cpp
tests/stage3/cornell_box/: cornell_box.cpp
